2014-12-22 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Cleanup manual.

2014-12-22 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/longlong.c:
	  Modify test cases for large signed / unsigned long long.

2014-12-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  src/pic14/main.c,
	  src/pic16/main.c,
	  doc/sdccman.lyx,
	  .version:
	  Remove obsolete feature macros.

2014-12-21 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Make AST dump more clear.
	* src/SDCCval.c:
	* src/SDCCval.h:
	* src/SDCCicode.c:
	* src/SDCCcse.c:
	* src/SDCCast.c:
	* src/SDCCglue.c:
	* src/pic16/SDCCglue.c:
	  make valFromLiteral() more accurate by a new unsigned long long parameter.
	* support/regression/tests/longlong.c:
	  Add new test cases for large unsigned long long.

2014-12-19 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/longlong.c:
	  Enable more test cases.
	* src/SDCCast.c:
	* src/SDCCicode.c:
	  Fix a bug: higher 4 bytes of a longlong literal are missing while dumping.
	* src/SDCCval.c:
	  Fix a bug: higher 4 bytes of a longlong value are discarded while casting from a double value.

2014-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  doc/Makefile.in:
	  Remove dependency on pdfopt.
	* support/regression/tests/bug-2313.c:
	  Regression test for bug #2313.

2014-12-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/libc/string/strncpy.c,
	  support/regression/tests/bug-2231.c:
	  Fix strncpy() in pic16. Patch by Diego Herranz.

2014-12-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (ifxOptimize): fixed bugs #2313/2330

2014-12-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/longlong.c:
	  Disable tests that fail due to broken gbz80 long long multiplication (bug #2329).
	* support/regression/tests/bug-2231.c,
	  support/regression/tests/float_single.c,